# springfield

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKPRESSURE.md  Cargo.toml  MEMENTO.md  README.md  SPRINGFIELD.md  done.md  fixed-issues.md  in-progress.md  justfile  pensa-implementation-plan.md  prompt.md  ralph-implementation-plan.md  ralph-prompt.md  spec-refinement-workflow.md  springfield-implementation-plan.md  springfield-prompt.md  todo.md
.claude/: settings.json
.docker/sandbox-templates/ralph/: Dockerfile
.forma/: README.md  daemon.project  refs.jsonl  sections.jsonl  specs.jsonl
.forma/specs/: claude-wrapper.md  cursus.md  forma.md  pensa.md  ralph.md  session-resume.md  shutdown.md  springfield.md  test-harness.md  vcs-utils.md
.pensa/: comments.jsonl  deps.jsonl  doc_refs.jsonl  issues.jsonl  precatum-est.json  src_refs.jsonl
.sgf/: BACKPRESSURE.md  MEMENTO.md  PENSA.md
.sgf/cursus/: build.toml  change.toml  changes.toml  cohere.toml  doc.toml  drop-ladder.toml  incarnatur.toml  install.toml  issues-log.toml  precatur.toml  reconcile.toml  spec-gen.toml  spec.toml  test-plan.toml  test.toml  verify.toml
.sgf/prompts/: build.md  change.md  changes.md  cohere.md  config.toml  doc.md  gather-refine-and-create.md  incarnatur-0-spec-to-issues.md  incarnatur-1-spec-to-issues-final-pass.md  incarnatur-2-build.md  issues.md  precatur-0-gather-preces.md  precatur-1-discuss-and-interview.md  precatur-1-write.md  precatur-2-review.md  precatur-3-revise.md  precatur-4-approve.md  reconcile-0-setup.md  reconcile-1-per-spec.md  reconcile-2-coherence.md  reconcile-3-tag.md  spec-approve.md  spec-discuss.md  spec-draft.md  spec-gen-0-discuss-and-interview.md  spec-gen-1-write.md  spec-gen-2-review.md  spec-gen-3-revise.md  spec-gen-4-approve.md  spec-harden.md  spec-legacy.md  spec-refine-and-create.md  spec-review.md  spec-revise.md  spec.md  test-plan.md  test.md  verify.md
crates/claude-wrapper/: Cargo.toml  README.md
crates/claude-wrapper/src/: main.rs  resolve.rs
crates/claude-wrapper/tests/: integration.rs
crates/docker-ctx/: Cargo.toml
crates/docker-ctx/src/: lib.rs
crates/forma/: Cargo.toml  README.md
crates/forma/src/: client.rs  daemon.rs  db.rs  lib.rs  main.rs  output.rs  types.rs
crates/forma/tests/: cli_client.rs  integration.rs
crates/pensa/: Cargo.toml  README.md
crates/pensa/src/: client.rs  daemon.rs  db.rs  error.rs  id.rs  lib.rs  main.rs  output.rs  types.rs
crates/pensa/tests/: integration.rs  proptest.proptest-regressions  proptest.rs
crates/ralph/: Cargo.toml  README.md
crates/ralph/src/: banner.rs  format.rs  main.rs  style.rs
crates/ralph/tests/: integration.rs
crates/ralph/tests/fixtures/: afk-session.ndjson  ralph-sample-output.txt
crates/sgf/: Cargo.toml  README.md
crates/sgf/src/: init.rs  lib.rs  loop_mgmt.rs  main.rs  orchestrate.rs  recovery.rs
crates/sgf/templates/: build.md  test-plan.md  test.md
crates/sgf/tests/: integration.rs
crates/shutdown/: Cargo.toml  README.md
crates/shutdown/src/: lib.rs
crates/springfield/: Cargo.toml  README.md
crates/springfield/src/: config.rs  init.rs  lib.rs  loop_mgmt.rs  main.rs  orchestrate.rs  prompt.rs  recovery.rs  style.rs  template.rs
crates/springfield/src/cursus/: context.rs  events.rs  mod.rs  runner.rs  state.rs  toml.rs
crates/springfield/src/iter_runner/: banner.rs  format.rs  mod.rs  pty_tee.rs  style.rs
crates/springfield/templates/: backpressure.md  build.md  config.toml  doc.md  install.md  issues-plan.md  issues.md  loom-specs-README.md  pensa.md  spec.md  test-plan.md  test.md  verify.md
crates/springfield/tests/: integration.rs
crates/springfield/tests/fixtures/: afk-session.ndjson  complete.ndjson  long-tool-result.ndjson  prompt.md  test-results.ndjson
crates/vcs-utils/: Cargo.toml
crates/vcs-utils/src/: lib.rs
crates/vcs-utils/tests/: integration.rs
specs/: README.md  claude-wrapper.md  forma.md  pensa.md  ralph.md  sgf.md  shutdown.md  springfield.md  vcs-utils.md
