[package]
name = "pensa"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pn"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.35", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio = { version = "1", features = ["full", "test-util"] }
portpicker = "0.1"
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1"
