[package]
name = "ralph"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.4"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
docker-ctx = { path = "../docker-ctx" }

[dev-dependencies]
nix = { version = "0.29", features = ["signal"] }
tempfile = "3"
