[package]
name = "ralph"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shutdown = { path = "../shutdown" }
springfield = { path = "../springfield" }
vcs-utils = { path = "../vcs-utils" }
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
nix = { version = "0.29", features = ["signal"] }
serde_json = "1"
shutdown = { path = "../shutdown" }
tempfile = "3"
