[package]
name = "sgf"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sgf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
signal-hook = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
portpicker = "0.1"
