[package]
name = "springfield"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sgf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
serde_yaml = "0.9"
shutdown = { path = "../shutdown" }
vcs-utils = { path = "../vcs-utils" }
libc = "0.2"
sha2 = "0.10"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
portpicker = "0.1"
nix = { version = "0.29", features = ["signal"] }
